Fixed issues introduced bu the previous commit. Fixed starter location and made it so each click on map moves the second marker